# ROS-on-Raspberry-Pi-with-NixOS-POC

./: .gitignore  README.md  base-config.nix  build_image.sh  deploy_switch.sh  deploy_test.sh  development.nix  environment.nix  ros.nix  shell.nix
debug_dumps/: list-nodes  list-nodes-no-daemon  ros_list_with_daemon.pcap  ros_list_with_no_daemon.pcap
nodes/: README.md
nodes/piper/: README.md  default.nix  package.xml  setup.cfg  setup.py
nodes/piper/piper/: piper.py
nodes/piper/voice_models/en_US-hfc_male-medium/: CMakeLists.txt  default.nix  package.xml
nodes/piper/voice_models/en_US-hfc_male-medium/voice_models/: en_US-hfc_male-medium.onnx
nodes/piper_interface/: CMakeLists.txt  default.nix  package.xml
nodes/piper_interface/srv/: Speak.srv
