<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>en_US-hfc_male-medium</name>
  <version>1.0.0</version>
  <description>Provides en_US-hfc_male-medium voice model</description>
  <maintainer email="jamescarl96@gmail.com">thecarl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
